
syntax = "proto3";

option go_package = "proto/oltp20";

package oltp20;

service OLTP20Service {
    rpc LocationNotification (StageLocation) returns (LocationStatus);
}

message StageLocation {
    string name = 5;
    string latitude = 6;
    string longitude = 7;
    string id = 8;

}

message LocationStatus {
    string status = 1;
}

